# CodeBook

./: .env  .gitignore  README.md  build.sh  codebook.sh  docker-compose.yaml  run.sh
.github/workflows/: nightly.yaml  release.yaml
Project/data/: data.csv  history-of-rock.csv
Project/examples/: JavaScript.ipynb  Perl.ipynb  Python.ipynb  Spark.ipynb  bash.ipynb  c.ipynb  lua.ipynb  rust.ipynb  swift.ipynb
Sources/: entrypoint.sh  sswg.swift-lang-1.8.0.vsix
Sources/kernel/swift_kernel/: README.rst  hatch_build.py  pyproject.toml  test_swift.py
Sources/kernel/swift_kernel/.github/workflows/: test.yml
Sources/kernel/swift_kernel/swift_kernel/: __init__.py  __main__.py  install.py  kernel.py
deployment/: Dockerfile
deployment/k8s/: deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
startup/: 01_hello.sh
